WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96243
[Qt][WK2] REGRESSION(
r127862
): It made one test fail and one test crash
https://bugs.webkit.org/show_bug.cgi?id=96243
Summary
[Qt][WK2] REGRESSION(r127862): It made one test fail and one test crash
Csaba Osztrogonác
Reported
2012-09-10 00:51:46 PDT
fast/events/mouse-click-events.html started to fail: ----------------------------------------------------- --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/fast/events/mouse-click-events-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/fast/events/mouse-click-events-actual.txt @@ -6,11 +6,11 @@ Left Mouse Button PASS eventLog is "mousedown(0) mouseup(0) click(0) mousedown(0) mouseup(0) click(0) dblclick(0) " Middle Mouse Button -PASS eventLog is "mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) " +FAIL eventLog should be mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) . Was mousedown(1) mousedown(1) . Right Mouse Button PASS eventLog is "mousedown(2) mouseup(2) mousedown(2) mouseup(2) " 4th Mouse Button -PASS eventLog is "mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) " +FAIL eventLog should be mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) . Was mousedown(1) mousedown(1) . PASS successfullyParsed is true TEST COMPLETE scrollbars/scrollbar-middleclick-nopaste.html started to fail and crash: (1st run - FAIL, 2nd run - CRASH) ----------------------------------------------------------------------------------------------------------- --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollbars/scrollbar-middleclick-nopaste-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollbars/scrollbar-middleclick-nopaste-actual.txt @@ -1 +1 @@ -PASS +FAIL 00:19:37.038 14068 WebProcess crash, pid = None, error_line = #CRASHED - WebProcess 00:19:37.040 14068 worker/0 scrollbars/scrollbar-middleclick-nopaste.html crashed, (stderr lines): 00:19:37.040 14068 1 0x7f6996dae248 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x1a16248) [0x7f6996dae248] 00:19:37.040 14068 2 0x7f6993ce7420 /lib/x86_64-linux-gnu/libc.so.6(+0x36420) [0x7f6993ce7420] 00:19:37.040 14068 3 0x7f69962cf798 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0xf37798) [0x7f69962cf798] 00:19:37.040 14068 4 0x7f6995cbb733 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x923733) [0x7f6995cbb733] 00:19:37.040 14068 5 0x7f6995cbcf68 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x924f68) [0x7f6995cbcf68] 00:19:37.040 14068 6 0x7f6995cc0dec /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x928dec) [0x7f6995cc0dec] 00:19:37.040 14068 7 0x7f699599a0c6 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x6020c6) [0x7f699599a0c6] 00:19:37.041 14068 8 0x7f6995991025 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x5f9025) [0x7f6995991025] 00:19:37.041 14068 9 0x7f699599121c /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x5f921c) [0x7f699599121c] 00:19:37.041 14068 10 0x7f69959e3760 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x64b760) [0x7f69959e3760] 00:19:37.041 14068 11 0x7f699584d3fb /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x4b53fb) [0x7f699584d3fb] 00:19:37.041 14068 12 0x7f699584d58b /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x4b558b) [0x7f699584d58b] 00:19:37.041 14068 13 0x7f699584e924 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x4b6924) [0x7f699584e924] 00:19:37.041 14068 14 0x7f699584ea6c /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x4b6a6c) [0x7f699584ea6c] 00:19:37.041 14068 15 0x7f69958507b9 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x4b87b9) [0x7f69958507b9] 00:19:37.041 14068 16 0x7f6995925c70 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x58dc70) [0x7f6995925c70] 00:19:37.041 14068 17 0x7f699591bfac /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(WKBundlePostSynchronousMessage+0x1c) [0x7f699591bfac] 00:19:37.041 14068 18 0x7f6947084663 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libWTRInjectedBundle.so(_ZN3WTR22EventSendingController7mouseUpEiPK13OpaqueJSValue+0x103) [0x7f6947084663] 00:19:37.041 14068 19 0x7f694708dcc3 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libWTRInjectedBundle.so(_ZN3WTR24JSEventSendingController7mouseUpEPK15OpaqueJSContextP13OpaqueJSValueS5_mPKPKS4_PS7_+0x43) [0x7f694708dcc3] 00:19:37.041 14068 20 0x7f6996afba72 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x1763a72) [0x7f6996afba72] 00:19:37.041 14068 21 0x7f6996c6a431 /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/WebKitBuild/Release/lib/libQtWebKit.so.5(+0x18d2431) [0x7f6996c6a431] 00:19:37.042 14068 22 0x7f6947aa51cc [0x7f6947aa51cc] 00:19:37.042 14068 [30/126] scrollbar-middleclick-nopaste.html crashed unexpectedly 00:19:37.042 14068 worker/0 killing driver 00:19:37.043 14068 worker/0 scrollbars/scrollbar-middleclick-nopaste.html failed: 00:19:37.043 14068 worker/0 WebProcess crashed
Attachments
Patch
(2.82 KB, patch)
2012-09-10 03:14 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-09-10 00:59:26 PDT
I skipped them to paint the bots green -
https://trac.webkit.org/changeset/128026
Please unskip them with the proper fix.
Andras Becsi
Comment 2
2012-09-10 02:37:31 PDT
The Web Inspector patch pointed out in the title (
http://trac.webkit.org/changeset/127861
) seem to be unrelated. I think the culprit is the X11 Global Selection patch which is the next change (
r127862
), must be a typo, am I righ Ossy?
Csaba Osztrogonác
Comment 3
2012-09-10 02:44:38 PDT
Yes, it was a typo. Thanks. :)
Allan Sandfeld Jensen
Comment 4
2012-09-10 02:56:19 PDT
I am guessing the reason for the crash could be that QT_NO_CLIPBOARD is set in this case? I forgot to check for it in the WK2 code, like it is in the WK1 code.
Allan Sandfeld Jensen
Comment 5
2012-09-10 03:14:31 PDT
Created
attachment 163079
[details]
Patch
Kenneth Rohde Christiansen
Comment 6
2012-09-10 03:39:02 PDT
Comment on
attachment 163079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=163079&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:1355 > + bool handled = frame->eventHandler()->handleMouseReleaseEvent(platformMouseEvent);
spacing issue
Allan Sandfeld Jensen
Comment 7
2012-09-10 03:54:54 PDT
Committed
r128040
: <
http://trac.webkit.org/changeset/128040
>
Csaba Osztrogonác
Comment 8
2012-09-10 04:52:55 PDT
(In reply to
comment #7
)
> Committed
r128040
: <
http://trac.webkit.org/changeset/128040
>
(In reply to
comment #1
)
> I skipped them to paint the bots green -
https://trac.webkit.org/changeset/128026
> Please unskip them with the proper fix.
You missed to unskip these tests. Please unskip them if they pass now.
Allan Sandfeld Jensen
Comment 9
2012-09-10 05:16:33 PDT
Comment on
attachment 163079
[details]
Patch Clearing flags after landing patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug