[Qt][WK2] REGRESSION(r127861): It made one test fail and one test crash https://bugs.webkit.org/show_bug.cgi?id=96243

Reviewed by Kenneth Rohde Christiansen.

Skip the code if QClipboard is not available, and give WebCore a chance to handle the event first.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::handleMouseEvent):
* WebProcess/WebPage/qt/WebPageQt.cpp:
(WebKit::WebPage::handleMouseReleaseEvent):

Canonical link: https://commits.webkit.org/114135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128040 268f45cc-cd09-0410-ab3c-d52691b4dbfc